fixed the mobile perspective (some text overflow)

--- a/project.css
+++ b/project.css
@@ -123,7 +123,7 @@ div.pj-intro {
         flex: 1;
         border-radius: 10%;
         padding: 4vw 5vw;
-        font-size: 3vw;
+        font-size: 2.8vw;
         border: 2px solid black;
     }
 }
